--- a/css/index.css
+++ b/css/index.css
@@ -91,6 +91,7 @@ main{
   height:auto;
 }
 #main-content{
+  width: 100%;
   height: 600px;
   display: flex;
   justify-content: center;
@@ -98,7 +99,9 @@ main{
   position: relative;
 }
 .captoion
-{left:40px;}
+{left:40px;
+  white-space:nowrap;
+}
 .captoion h1{
   margin: 10px;
   font-size: 25px;
@@ -191,7 +194,7 @@ section {
   text-align:center;}
 
 #nametext
-{
+{ white-space:nowrap;
   width: 100%;
   background-color: #001438;
   font-weight: bold;}
